# ipmsg

./: CMakeLists.txt
src/: share.h
src/install/: CMakeLists.txt
src/uninst/: CMakeLists.txt
